--- a/source/index.html
+++ b/source/index.html
@@ -11,34 +11,35 @@
 
   <body>
     <header class="page-header wrapper">
-      <!-- <div class="wrapper"> -->
-      <a class="page-header__link logo-link" href="#">
-        <img class="logo-link__image" src="img/logo-mobile.svg" alt="КЭТ ЭНЕРДЖИ" width="192" height="38">
+      <a class="page-header__link" href="#">
+        <!-- TODO для внутренних страниц -->
+        <!-- <a class="page-header__link page-header__link--inner-page" href="#"> -->
+        <!-- <a class="page-header__link logo-link" href="index.html"> -->
+        <!-- TODO адаптировать размеры изображения ЛОГО -->
+        <img class="page-header__logo" src="img/logo-mobile.svg" alt="КЭТ ЭНЕРДЖИ" width="184" height="38">
       </a>
+      <!-- TODO = 3 = расставить header-nav__item--active для catalog и form -->
       <nav class="page-header__nav header-nav">
-        <button class="header-nav__toggle" type="button"> </button>
-        <!-- alt="Открыть меню сайта" width="24" height="18" -->
+        <button class="header-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="header-nav__list">
           <li class="header-nav__item header-nav__item--active">
-            <!-- <a href="index.html">главная</a> -->
             <a href="#">главная</a>
+            <!-- <a href="index.html">главная</a> -->
           </li>
           <li class="header-nav__item">
             <a href="catalog.html">каталог продукции</a>
-            <!-- <a>каталог продукции</a> -->
+            <!-- <a href="#">каталог продукции</a> -->
           </li>
           <li class="header-nav__item">
             <a href="form.html">подбор программы</a>
-            <!-- <a>подбор программы</a> -->
+            <!-- <a href="#">подбор программы</a> -->
           </li>
         </ul>
       </nav>
-      <!-- </div> -->
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Интернет-магазин функционального питания для ваших любимых котиков
-      </h1>
+      <h1 class="visually-hidden">Интернет-магазин функционального питания для ваших любимых котиков</h1>
       <section class="health-program">
         <h2 class="visually-hidden">Подобрать программу здоровья</h2>
         <header class="health-program__header wrapper">
@@ -48,98 +49,97 @@
           <img class="health-program__img" src="../img/index-can-mobile@1x.png" alt="Кэт-энерджи с курицей для вашего кота" width="280" height="271">
           <a class="health-program__link button button--green" href="form.html">Подобрать программу</a>
         </header>
-
-        <div class="wrapper">
-          <ul class="health-program__list">
-            <li class="health-program__item health-program-item">
-              <h3 class="health-program-item__title program-item__icon program-item__icon--slim">Похудение</h3>
-              <p class="health-program-item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
-                лишний вес.</p>
-              <a class="health-program-item__link" href="catalog.html">Каталог Slim</a>
-            </li>
-            <li class="health-program__item health-program-item">
-              <h3 class="health-program-item__title program-item__icon program-item__icon--pro">Набор массы</h3>
-              <p class="health-program-item__description">
-                Заработать авторитет среди дворовых котов и даже собак?
-                Серия Cat Energy Pro поможет вашему коту нарастить необходимые
-                мышцы!
-              </p>
-              <a class="health-program-item__link" href="catalog.html">Каталог pro</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="health-program__list wrapper">
+          <li class="health-program__item health-program-item">
+            <h3 class="health-program-item__title program-item__icon program-item__icon--slim">Похудение</h3>
+            <p class="health-program-item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
+              лишний вес.</p>
+            <a class="health-program-item__link" href="catalog.html">Каталог Slim</a>
+          </li>
+          <li class="health-program__item health-program-item">
+            <h3 class="health-program-item__title program-item__icon program-item__icon--pro">Набор массы</h3>
+            <p class="health-program-item__description">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые
+              мышцы!
+            </p>
+            <a class="health-program-item__link" href="catalog.html">Каталог pro</a>
+          </li>
+        </ul>
       </section>
 
       <section class="advantages wrapper">
-        <!-- <div class="wrapper"> -->
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantages__icon advantages__icon--leaf">
-            Функциональное питание содержит только полезные питательные
-            вещества.
+            <p class="advantages__text">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
           </li>
           <li class="advantages__item advantages__icon advantages__icon--powder">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и
-            готово.
+            <p class="advantages__text">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
           </li>
-          <li class="advantages__item advantages__icon  advantages__icon--dining">
-            Замените один-два приема обычной еды на наше функциональное
-            питание.
+          <li class="advantages__item advantages__icon advantages__icon--dining">
+            <p class="advantages__text">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
           </li>
-          <li class="advantages__item advantages__icon  advantages__icon--clock">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего
-            питомца!
+          <li class="advantages__item advantages__icon advantages__icon--clock">
+            <p class="advantages__text">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
           </li>
         </ul>
-        <!-- </div> -->
       </section>
-      <section class="example wrapper">
-        <div class="example__text-wrapper">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-            этом он не менял своих привычек и по-прежнему спит по 16 часов в
-            день.
-          </p>
 
-          <div class="example__keypoints keypoints">
-            <div class="keypoints__item keypoints__item--weight keypoints__item--border">
-              <span class="keypoints__value">5 кг</span>
-              <span class="keypoints__option">снижение веса</span>
-            </div>
-
-            <div class="keypoints__item keypoints__item--time-spent keypoints__item--border">
-              <span class="keypoints__value">60 дней</span>
-              <span class="keypoints__option">затрачено времени</span>
-            </div>
-            <div class="keypoints__item keypoints__item--food-cost keypoints__item--grow">
-              <span class="keypoints__value">Затраты на питание:</span>
-              <span class="keypoints__option">15 000 руб.</span>
+      <section class="example">
+        <div class="wrapper">
+          <div class="example__text-wrapper">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+              этом он не менял своих привычек и по-прежнему спит по 16 часов в
+              день.
+            </p>
+            <div class="example__keypoints keypoints">
+              <div class="keypoints__item item-bordered">
+                <span class="item-bordered__value">5 кг</span>
+                <span class="item-bordered__option">снижение веса</span>
+              </div>
+              <div class="keypoints__item item-bordered">
+                <span class="item-bordered__value">60 дней</span>
+                <span class="item-bordered__option">затрачено времени</span>
+              </div>
+              <div class="keypoints__item item-wide">
+                <span class="item-wide__value">Затраты на питание:</span>
+                <span class="item-wide__option">15 000 руб.</span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="example__slider slider">
-          <div class="slider__photocards">
-            <img class="slider__photo" src="../img/before-mobile@1x.png" alt="Кот до начала программы оздоровления" width="311" height="232">
-            <!-- <img class="example-slider__photo"
-                 src="blocks/example/img/after_mobile.png"
-                 alt="Кот по окончании программы оздоровления" width="251"
-                 height="240"> -->
+          <div class="example__slider slider js-slider-before">
+            <!-- js-slider-before -->
+            <div class="slider__photocards">
+              <img class="slider__photo slider__photo--before" src="../img/before-mobile@1x.png" alt="Кот до начала программы оздоровления" width="320" height="240">
+              <img class="slider__photo slider__photo--after" src="../img/after-mobile@1x.png" alt="Кот по окончании программы оздоровления" width="320" height="240">
+            </div>
+            <div class="slider__toggles">
+              <button class="slider__toggle slider__toggle--before" type="button">Было</button>
+              <div class="slider__indicator" type="button"></div>
+              <button class="slider__toggle slider__toggle--after" type="button">Стало</button>
+            </div>
           </div>
-          <p class="slider__toggles">
-            <button class="slider__toggle" type="button">Было</button>
-            <button class="slider__toggle" type="button">Стало</button>
-          </p>
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
       <section class="page-footer__contacts contacts">
+        <h2 class="visually-hidden">Как нас найти</h2>
         <div class="contacts__wrapper wrapper">
-          <h2 class="visually-hidden">Как нас найти</h2>
-          <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
+          <h3 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h3>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__map">
@@ -148,50 +148,61 @@
           <!-- <iframe class="contacts__mapframe"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253056438!2d30.320853351292428!3d59.93871916896568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1573567411114!5m2!1sru!2sru"
                   width="320" height="400" style="border: 0;" allowfullscreen=""></iframe> -->
-          <!-- <iframe class="contacts__mapframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A3291e2963d38dc5ad0f2d796d8de413f085cf1fd282d6e04bf5ac540c03fadf9&amp;source=constructor" width="320" height="400" style="border: 0;"></iframe> -->
+          <!-- <iframe class="contacts__mapframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A3291e2963d38dc5ad0f2d796d8de413f085cf1fd282d6e04bf5ac540c03fadf9&amp;source=constructor" width="320"
+                  height="400" style="border: 0;"></iframe> -->
         </div>
       </section>
       <!--  На главной должен быть линк на верх страницы?
           На других страницах ссылка на главную? -->
-      <section class="page-footer__links footer-links wrapper">
-        <h2 class="visually-hidden">Как с нами связаться</h2>
+      <section class="page-footer__links footer-links">
+        <div class="wrapper">
 
-        <a class="footer-links__item footer-logo" href="#">
-          <img class="footer-logo__image" src="../img/logo-footer.svg" alt="Интернет-магазин фитнес еды для котиков" width="128" height="124">
-        </a>
-
-        <ul class="footer-links__item social">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">VK</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Instagram</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
-              <span class="visually-hidden">Facebook</span>
-            </a>
-          </li>
-        </ul>
-
-        <address class="footer-links__item copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт разработчика">
-            <span class="copyright__title">HTML Academy</span>
+          <h2 class="visually-hidden">Как с нами связаться</h2>
+          <a class="footer-links__item footer-logo" href="#">
+            <img class="footer-logo__image" src="../img/logo-footer.svg" alt="Интернет-магазин фитнес еды для котиков" width="128" height="124">
           </a>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт веб-разработчика">
-            <!-- TODO изменить цвет иконки в редакторе -->
-            <img src="../img/htmlacademy.svg" alt="Лого HTML академии" width="27" height="34">
-          </a>
-        </address>
 
+          <ul class="footer-links__item social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">VK</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Instagram</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank">
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+          </ul>
+
+          <address class="footer-links__item copyright">
+
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт разработчика">
+              <span class="copyright__title">HTML Academy</span>
+            </a>
+
+            <a class="copyright__link copyright__link--logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Посетите сайт веб-разработчика">
+              <!-- <img src="../img/htmlacademy.svg" alt="Лого HTML академии" width="27" height="34"> -->
+            </a>
+
+          </address>
+        </div>
       </section>
     </footer>
 
     <!--TODO Проверить скрин-ридером -->
+    <!-- TODO вставляем inline SVG -->
+    <!-- <svg class="user-list__login-icon" width="16" height="16"... ></svg> -->
+    <!-- TODO в SCSS
+           polygon {
+          fill: #ffffff;
+        } -->
+
   </body>
 
 </html>
