module5-task1 resolve green background issue

--- a/source/header.html
+++ b/source/header.html
@@ -38,7 +38,7 @@
           </ul>
         </nav>
       </div>
-      <section class="health-program">
+      <section class="page-header__health-program health-program">
         <div class="health-program__wrapper wrapper">
           <h2 class="visually-hidden">Подобрать программу здоровья</h2>
           <h2 class="health-program__title">Функциональное питание для котов
@@ -49,13 +49,17 @@
         </div>
       </section>
     </header>
-    <!-- <section class="program-set">
-      <h2 class="visually-hidden">Список программ оздоровления для вашего любимца</h2>
-      <div class="program-set__wrapper">
-        <ul class="program-set__list health-program-list">
-        </ul>
-      </div>
-    </section> -->
+    <main class="page-main">
+      <section class="program-set">
+        <!-- <h2 class="visually-hidden">Список программ оздоровления для вашего любимца</h2>
+    <div class="program-set__wrapper">
+      <ul class="program-set__list health-program-list">
+      </ul>
+    </div> -->
+      </section>
+    </main>
+
   </body>
+
 
 </html>
