--- a/source/index.html
+++ b/source/index.html
@@ -10,34 +10,8 @@
   </head>
 
   <body>
-    <header class="page-header wrapper">
-      <!-- <div class="wrapper"> -->
-      <a class="page-header__link" href="#">
-        <!-- TODO для внутренних страниц -->
-        <!-- <a class="page-header__link page-header__link--inner-page" href="#"> -->
-        <!-- <a class="page-header__link logo-link" href="index.html"> -->
-        <!-- TODO адаптировать размеры изображения ЛОГО -->
-        <img class="page-header__logo" src="img/logo-mobile.svg" alt="КЭТ ЭНЕРДЖИ" width="184" height="38">
-      </a>
-      <!-- TODO = 3 = расставить header-nav__item--active для catalog и form -->
-      <nav class="page-header__nav header-nav">
-        <button class="header-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="header-nav__list">
-          <li class="header-nav__item header-nav__item--active">
-            <a href="#">главная</a>
-            <!-- <a href="index.html">главная</a> -->
-          </li>
-          <li class="header-nav__item">
-            <a href="catalog.html">каталог продукции</a>
-            <!-- <a href="#">каталог продукции</a> -->
-          </li>
-          <li class="header-nav__item">
-            <a href="form.html">подбор программы</a>
-            <!-- <a href="#">подбор программы</a> -->
-          </li>
-        </ul>
-      </nav>
-      <!-- </div> -->
+    <header class="page-header">
+      <!-- включить <header> из файла header.html -->
     </header>
 
     <main class="page-main">
